
2008-04-17  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c, configure.in, config.h.in, ffmpeg:
		update for current ffmpeg

2008-04-17  Jacques Blouin  <jacdex@gmail.com>
	* po/fr.po: added French translation

2008-03-12  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: frame.h, xtoxwd.h, led_meter.h, codecs.h, 
		colors.h, xvidcap-intl.h, dbus-server-object.h, 
		control.h, gnome_warning.h, xtoffmpeg.h, 
		gnome_ui.h, capture.h, app_data.h, job.h, 
		eggtrayicon.h, gnome_frame.h, gnome_options.h, 
		xvc_error_item.h: complete fix for bug # 1885088
		(only _XReadPad and __cplusplus remain which
		are only used here, defined elsewhere)

2008-02-08  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: led_meter.h, codecs.h, control.h, 
		gnome_warning.c, app_data.c, app_data.h, 
		job.h, eggtrayicon.h, xv_error_item.c, 
		xvc_error_item.c, Makefile.am, 
		xv_error_item.h, xvc_error_item.h,
		../po: en.po, ru.po, es.po, de.po, it.po, 
		POTFILES.in, zh_CN.po: fix bug # 1885088 
		and also change XvError* to match the 
		XVC_* naming scheme now used elsewhere
	* doc/xvidcap/de: xvidcap.xml-de.po, 
		figures/menu.png, figures/prefs-commands.png, 
		figures/prefs-mf.png, figures/prefs-sf.png, 
		figures/prefs-general.png: docs l10n

2008-02-03  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/app_data.c: fix for but #1885105 was
		incomplete
	* src/app_data.c: fix for but #1885105 was
		still flawed

2008-02-02  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* aclocal.m4, src: led_meter.c, codecs.c, 
		colors.c, led_meter.h, codecs.h, 
		colors.h, control.h, xtoffmpeg.c, 
		gnome_ui.c, capture.c, app_data.c, 
		job.c, app_data.h, gnome_frame.c, 
		gnome_options.c, main.c, options.c: 
		indentation and fix for bug # 1880627,
		thanks Markus for the original patch.
	* configure.in, config.h.in, acinclude.m4,
		aclocal.m4: fix for rfe # 1880629
	* doc/xvidcap/it/xvidcap.xml, doc:  
		C/xvidcap-dbus-client.1, C/xvidcap.1, 
		es/xvidcap.1, de/xvidcap-dbus-client.1, 