@@ -1,4 +1,14 @@
 
+2008-05-02  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* src/xtoffmpeg.c, src/gnome_ui.c, src/gnome_frame.c:
+		preliminary fix for bug # 1952636 and for
+		too small encoding buffer for very small
+		areas (though according to ffmpeg it should
+		have been large enough)
+	* doc/xvidcap/C/figures/menu-show-frame.png: added
+		image for new menu item
+	* . (properties): updated to current ffmpeg svn
+
 2008-04-17  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* src/xtoffmpeg.c, configure.in, config.h.in, ffmpeg:
 		update for current ffmpeg
